fixed an alignment problem with video borders on market page

--- a/src/Components/Project/styles.scss
+++ b/src/Components/Project/styles.scss
@@ -414,10 +414,6 @@ $descriptionWidth: 40rem;
         padding:2rem 0;
       }
     }
-
-    .nav {
-      transform: translateX(0);
-    }
   }
 }
 
